--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1 id = "title"> Build a Survey Form </h1>
+<h1 id = "title"> This is a Survey Form </h1>
 <p id = "description">  This is the desctription for the survey </p>
 <form id = "survey-form">
   <label id = "name-label"> Name: </label>
